[package]
name = "dat-incognito-org"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletproofs = { path = "../../dalek-cryptography/bulletproofs" }
curve25519-dalek = {}
merlin = { version = "2", default-features = false }
rand = { version = "0.7", default-features = false }

[lib]
name = "newbp"
crate-type = ["dylib"]